# TNN

./: CMakeLists.txt
debug/: CMakeLists.txt  debug.cc
source/tnn/core/: layer_type.cc  layer_type.h
source/tnn/device/cpu/acc/: cpu_greater_layer_acc.cc
source/tnn/layer/: greater_layer.cc
tools/onnx2tnn/src/core/layer/: onnx_converter_greater.cc
